# RealtimeSTT

./: README.md  example_wake_word_detection.py  pyproject.toml
RealtimeSTT/: audio_recorder.py  audio_recorder_client.py
RealtimeSTT_server/: stt_server.py
